brat/test/golden/error/noovers.brat.golden
Error in test/golden/error/noovers.brat@2:2-8
f(a, b) = []
 ^^^^^^

  Nothing to bind to: b

